--- a/LATEX/CBSE/cbse.tex
+++ b/LATEX/CBSE/cbse.tex
@@ -45,12 +45,12 @@
 \item Find the value of $\lambda$, so that the lines $\frac{1-x}{3}=\frac{7y-14}{\lambda}=\frac{z-3}{2}$ and $\frac{7-7x}{3\lambda}=\frac{y-5}{1}=\frac{6-z}{5}$ are at right angles. Also, find whether the lines are intersecting or not.       
 \item If a line makes angles $ 90\degree,135\degree,45\degree$ with the x,y and z axes respectively,find its direction cosines.
 \section{Integration}
-\item  Find: $\int \dfrac{\sec^2x}{\sqrt{\tan^2x+4}},dx$
-\item Find: $\int\sin^{-1}2x,dx $
-\item \noindent Find: $\int\sqrt{1-\sin2x},dx$ , $\frac{\pi}{4}< x < \frac{\pi}{2}$
-\item Find: $ \int\sin^{-1}2x,dx$
-\item Find: $\int\dfrac{3x+5}{x^2+3x-18},dx$
-\item prove that $\int_{0}^{a}f(x),dx=\int_{0}^{a}f(a-x),dx$ , hence evaluate $\int_{0}^{\pi}\frac{x\sin x}{1+\cos^2x}dx$ .
+\item  Find: $\int \dfrac{\sec^2x}{\sqrt{\tan^2x+4}} dx$
+\item Find: $\int\sin^{-1}2x dx $
+\item \noindent Find: $\int\sqrt{1-\sin2x} dx$ , $\frac{\pi}{4}< x < \frac{\pi}{2}$
+\item Find: $ \int\sin^{-1}2x dx$
+\item Find: $\int\dfrac{3x+5}{x^2+3x-18} dx$
+\item prove that $\int_{0}^{a}f(x),dx=\int_{0}^{a}f(a-x) dx$ , hence evaluate $\int_{0}^{\pi}\frac{x\sin x}{1+\cos^2x}dx$ .
 \item Solve the differential equation :$\brak{1+x^2}\frac{dy}{dx}+2xy-4x^2=0$ ,subject to the initial condition $y\brak{0}=0$ 
 \item Solve the differential equation:$xdy-ydx=\sqrt{x^2+y^2}dx$ ,given that $y=0$ when $x=1$.
 \section{Intersection of Conics}
